example/ac/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: access-control
  labels:
    name: access-control
