example/ac/04-deployment-access-control-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: console
  namespace: access-control
  labels:
    service: console
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: console
---
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: console
  namespace: access-control
  labels:
    app: console
spec:
  replicas: 1
  selector:
    matchLabels:
      app: console
  template:
    metadata:
      labels:
        app: console
    spec:
      containers:
      - name: console
        image: registry.gitlab.com/target-digital-transformation/user-access-fe/demo/master
        imagePullPolicy: Always
        ports:
        - containerPort: 80
          name: http
      imagePullSecrets:
      - name: registry.gitlab.com
