example/ac/05-ingress-access-control.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  name: ladon
  namespace: access-control
spec:
  rules:
  - host: ladon.access-control
    http:
      paths:
      - backend:
          serviceName: ladon
          servicePort: 80
        path: /
