example/ac/06-ingress-console-access-control.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: console.ladon
  namespace: access-control
spec:
  rules:
  - host: console.ladon.access-control
    http:
      paths:
      - backend:
          serviceName: console.ladon
          servicePort: 80
        path: /
